--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
+    "firebase": "^10.12.4",
     "mongoose": "^8.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
